--- a/_config.yml
+++ b/_config.yml
@@ -38,12 +38,12 @@ highlight_theme: github
 # ---------------- #
 #      Author      #
 # ---------------- #
-author: Zhuang Ma
+author: itlgl
 organization: 
 organization_url: 
-github_username: mzlogin
-location: Wuhan, China
-email: chumpma@gmail.com
+github_username: itlgl
+location: Beijing, China
+email: itlgl@outlook.com
 
 # ---------------- #
 #    Navigation    #
