--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # ---------------- #
 #   Main Configs   #
 # ---------------- #
-baseurl: /note
+baseurl:
 url: https://itlgl.com/note
 date_format: "ordinal"
 title: Note
